bindings/rust/libgpiod-sys/src/lib.rs


extern "C" {
    /// Read up to a certain number of events from the GPIO line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `events` Buffer to which the event data will be copied. Must hold at
    /// least the amount of events specified in `num_events`.
    /// * `num_events` Specifies how many events can be stored in the buffer.
    ///
    /// ## Return
    /// On success returns the number of events stored in the buffer, on
    /// failure `-1` is returned.
    pub fn gpiod_line_event_read_multiple(
        line: *mut gpiod_line,
        events: *mut gpiod_line_event,
        num_events: c_uint,
    ) -> c_int;
}

extern "C" {
    /// Get the event file descriptor.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// Number of the event file descriptor or `-1` if the user tries to
    /// retrieve the descriptor from a line that wasn't configured for
    /// event monitoring.
    ///
    /// ## Note
    /// Users may want to poll the event file descriptor on their own. This routine
    /// allows to access it.
    pub fn gpiod_line_event_get_fd(line: *mut gpiod_line) -> c_int;
}

extern "C" {
    /// Read the last GPIO event directly from a file descriptor.
    ///
    /// ## Arguments
    /// * `fd` File descriptor.
    /// * `event` Buffer in which the event data will be stored.
    ///
    /// ## Return
    /// `0` if the event was read correctly, `-1` on error.
    ///
    /// ## Note
    /// Users who directly poll the file descriptor for incoming events can also
    /// directly read the event data from it using this routine. This function
    /// translates the kernel representation of the event to the libgpiod format.
    pub fn gpiod_line_event_read_fd(
        fd: c_int,
        event: *mut gpiod_line_event,
    ) -> c_int;
}

extern "C" {
    /// Read up to a certain number of events directly from a file descriptor.
    ///
    /// ## Arguments
    /// * `fd` File descriptor.
    /// * `events` Buffer to which the event data will be copied. Must hold at
    /// least the amount of events specified in `num_events`.
    /// * `num_events` Specifies how many events can be stored in the buffer.
    ///
    /// ## Return
    /// On success returns the number of events stored in the buffer, on
    /// failure `-1` is returned.
    pub fn gpiod_line_event_read_fd_multiple(
        fd: c_int,
        events: *mut gpiod_line_event,
        num_events: c_uint,
    ) -> c_int;
}

extern "C" {
    /// Get the API version of the library as a human-readable string.
    ///
    /// ## Return
    /// Human-readable string containing the library version.
    pub fn gpiod_version_string() -> *const c_char;
}
